# ecombot

./: .dockerignore  .env.example  Dockerfile  LICENSE  MANUAL_TESTING_WORKFLOW.md  alembic.ini  cleanup.py  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  org.sh  pyproject.toml  pytest.ini  requirements.txt  vercel.json
.cursor/: rules.json
migrations/: env.py
migrations/versions/: 02a55e62d3dd_change_carts_user_id_to_biginteger.py  09839aaf681e_add_telegram_file_id_to_product_images.py  0ada6921b672_missing_migration_placeholder.py  6db09a9b6732_create_initial_db_schema.py  7446947a531a_change_telegram_id_to_biginteger_to_.py  894c36f5cffd_refactor_delivery_logic_add_pickup_.py  8f9a2b3c4d5e_add_soft_delete_fields.py  96989cc2f910_initial_schema.py  aa4f5240c155_make_order_address_nullable_and_default_.py  add_product_images_table.py
src/ecombot/: config.py  config_db.py  main.py  (+1 more)
tests/: conftest.py  test_cart_crud.py  test_cart_service.py  test_catalog_crud.py  test_handlers_admin_categories_add.py  test_handlers_admin_helpers.py  test_handlers_admin_navigation.py  test_handlers_admin_orders_utils.py  test_handlers_admin_products_add.py  test_handlers_admin_products_restore.py  test_handlers_cart_utils.py  test_handlers_catalog_utils.py  test_handlers_checkout_fast_path.py  test_handlers_checkout_main.py  test_handlers_orders_details.py  test_handlers_orders_utils.py  test_handlers_profile_address_management.py  test_handlers_profile_main_profile.py  test_keyboards_admin.py  test_keyboards_catalog.py  test_keyboards_common.py  test_keyboards_orders.py  test_keyboards_profile.py  test_models.py  test_order_service.py
(+149 files in other folders)
