[tool.poetry]
name = "botaikhleb"
version = "0.1.0"
description = "Not just bread, but a lifestyle. Botai!"
authors = ["dmvaled <dmvaled@gmail.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{ include = "ecombot", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
loguru = "^0.7.2"
pydantic = "==2.11.10"
pydantic-settings = "==2.12.0"
aiogram = "^3.4.1"
asyncpg = "^0.30.0"
alembic = "==1.17.2"
sqlalchemy = { version = "^2.0.45", extras = ["asyncio", "mypy"] }
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pillow = "^12.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "==4.5.1"
ruff = "==0.13.3"
black = "^24.2.0"
mypy = "==1.19.1"
platformdirs = "==4.5.1"
filelock = "==3.20.2"
nodeenv = "==1.10.0"
cfgv = "==3.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"
coverage = "==7.13.1"
iniconfig = "==2.3.0"

[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
 select = [
  "E", # pycodestyle errors
  "F", # pyflakes
  "W", # pycodestyle warnings
  "I", # isort
  "B", # flake8-bugbear
  "Q", # flake8-quotes
  "C4", # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
force-sort-within-sections = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
